<resources>
    <string name="app_name">My Application</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Iniciar</string>
    <string name="previous">Previous</string>
    <string name="Inicio">Inicio</string>
   <string name="Registro">Registro</string>

    <string name="lorem_ipsum">
        Aplicacion de Inventarios
    </string>
    <string name="User">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="Registrar">Registrar</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>

</resources>